<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CookBook</string>
    <string name="new_dish">Новое блюдо</string>
    <string name="found_dish">Найти блюдо</string>
    <string name="categories">Категории</string>

    <string name="name_dish">Название блюда</string>
    <string name="category">Категория</string>
    <string-array name="category_list">
        <item>Бульоны и супы</item>
        <item>Горячие блюда</item>
        <item>Салаты</item>
        <item>Закуски</item>
        <item>Напитки</item>
        <item>Соусы</item>
        <item>Выпечка</item>
        <item>Десерты</item>
        <item>Каши</item>
        <item>Другое</item>
    </string-array>
    <string-array name="difficult_list">
    <item>Легко</item>
    <item>Средне</item>
    <item>Тяжело</item>
</string-array>
    <string-array name="difficult_list_search">
        <item>Выберете сложность</item>
        <item>Легко</item>
        <item>Средне</item>
        <item>Тяжело</item>
    </string-array>
    <string name="add_category">Добавить категорию</string>
    <string name="preparation">Сложность приготовления</string>
    <string name="time_preparation">Время приготовления (мин)</string>
    <string name="number_of_servings">Количество порций</string>
    <string name="add_photo">Добавить фотографию</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="add_ingredient">Добавить ингредиент</string>
    <string name="name_ingredient">Введите название</string>
    <string name="number_ingredient">Количество</string>
    <string name="button_delete">X</string>
    <string name="ok">Готово</string>
    <string name="recipe">Рецепт</string>
    <string name="enter_recipe">Введите рецепт:</string>
    <string name="on_main">На главную</string>
    <string name="delete_recipe">Удалить</string>
    <string name="edit_recipe">Редактировать</string>
    <string-array name="measure_unit">
        <item>шт</item>
        <item>стакан</item>
        <item>ч/л</item>
        <item>ст/л</item>
        <item>кг</item>
        <item>г</item>
        <item>мг</item>
        <item>мл</item>
        <item>л</item>
        <item>по вкусу</item>
    </string-array>

    <string name="search">Искать</string>

</resources>
