<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_dish"
        android:id="@+id/textView2"
        android:textColor="@color/font"
        android:textSize="@dimen/textSize"
        android:layout_margin="@dimen/margins"
        android:textStyle="bold|italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:hint="@string/name_dish_hint"
        android:textColor="@color/text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/textView3"
        android:textColor="@color/font"
        android:layout_margin="@dimen/margins"
        android:textSize="@dimen/textSize"
        android:textStyle="bold|italic" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/category_list"
        android:layout_marginRight="@dimen/margins"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preparation"
        android:id="@+id/textView4"
        android:textColor="@color/font"
        android:layout_margin="@dimen/margins"
        android:textSize="@dimen/textSize"
        android:textStyle="bold|italic" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_marginLeft="@dimen/margins"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_preparation"
        android:id="@+id/textView5"
        android:textColor="@color/font"
        android:layout_margin="@dimen/margins"
        android:textSize="@dimen/textSize"
        android:textStyle="bold|italic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:id="@+id/editText2"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginLeft="@dimen/margins" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_servings"
        android:id="@+id/textView6"
        android:textColor="@color/font"
        android:layout_margin="@dimen/margins"
        android:textSize="@dimen/textSize"
        android:textStyle="bold|italic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="2"
        android:id="@+id/editText3"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginBottom="@dimen/margin_bot" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/add_photo"
        android:id="@+id/button5"
        android:textColor="@color/font"
        android:background="@color/bgbutton"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:onClick="selectImage" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:id="@+id/button7"
        android:layout_gravity="bottom|center_horizontal"
        android:textColor="@color/font"
        android:background="@color/bgbutton"
        android:layout_marginTop="@dimen/text_size_button"
        android:layout_marginBottom="@dimen/margins"
        android:onClick="Validation" />
</LinearLayout>
</ScrollView>

