<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name_dish"
    android:id="@+id/text_name_dish"
    android:textColor="@color/font"
    android:textSize="@dimen/textSize"
    android:layout_margin="@dimen/margins"
    android:textStyle="bold|italic" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/search_name"
    android:layout_marginLeft="@dimen/margins"
    android:layout_marginRight="@dimen/margins"
    android:inputType="text"
    android:textColor="@color/text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preparation"
        android:id="@+id/text_preparation"
        android:textColor="@color/font"
        android:layout_margin="@dimen/margins"
        android:textSize="@dimen/textSize"
        android:textStyle="bold|italic" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_dif_search"
        android:entries="@array/difficult_list_search"
        android:layout_marginRight="@dimen/margins"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_preparation"
        android:id="@+id/text_time_preparation"
        android:textColor="@color/font"
        android:layout_margin="@dimen/margins"
        android:textSize="@dimen/textSize"
        android:textStyle="bold|italic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:id="@+id/search_time_preparation"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginBottom="@dimen/margins" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search_button"
        android:background="@color/bgbutton"
        android:textColor="@color/font"
        android:layout_marginBottom="@dimen/margins"
        android:onClick="Search" />
</LinearLayout>