<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name_ingredient"
            android:hint="@string/name_ingredient"
            android:layout_marginLeft="@dimen/margins"
            android:inputType="text"
            android:layout_weight="3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:id="@+id/delete_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/edit_number_ingredient"
        android:hint="@string/number_ingredient"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margins" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/spinner_measure_unit"
            android:entries="@array/measure_unit"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

    </LinearLayout>

</LinearLayout>