<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/on_main"
        android:id="@+id/on_main_button"
        android:background="@color/bgbutton"
        android:textColor="@color/font"
        android:layout_marginBottom="@dimen/margins" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/edit_recipe"
        android:id="@+id/edit_button"
        android:background="@color/bgbutton"
        android:textColor="@color/font"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginLeft="@dimen/margins" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/delete_recipe"
        android:id="@+id/delete_button"
        android:background="@color/bgbutton"
        android:textColor="@color/font"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_recipe"
        android:textColor="@color/font"
        android:textSize="@dimen/text_size_button"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginTop="@dimen/margins" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margins">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/text_category"
        android:textColor="@color/font"
        android:textSize="@dimen/textSize"
        android:textStyle="bold|italic"
        android:layout_marginLeft="@dimen/margins" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/category_choose"
          android:textColor="@color/text"
          android:textSize="@dimen/textSize"
          android:textStyle="italic"
          android:layout_marginLeft="@dimen/margins" />

  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margins">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparation"
            android:id="@+id/text_preparation"
            android:textColor="@color/font"
            android:layout_marginLeft="@dimen/margins"
            android:textSize="@dimen/textSize"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/preparation_choose"
            android:textColor="@color/text"
            android:textSize="@dimen/textSize"
            android:textStyle="italic"
            android:layout_marginLeft="@dimen/margins" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margins">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_preparation"
            android:id="@+id/time_preparation"
            android:textColor="@color/font"
            android:layout_marginLeft="@dimen/margins"
            android:textSize="@dimen/textSize"
            android:textStyle="bold|italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_choose"
            android:textColor="@color/text"
            android:textSize="@dimen/textSize"
            android:textStyle="italic"
            android:layout_marginLeft="@dimen/margins" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margins">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_servings"
            android:id="@+id/text_number_of_servings"
            android:textColor="@color/font"
            android:layout_marginLeft="@dimen/margins"
            android:textSize="@dimen/textSize"
            android:textStyle="bold|italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number_of_servings_choose"
            android:textColor="@color/text"
            android:textSize="@dimen/textSize"
            android:textStyle="italic"
            android:layout_marginLeft="@dimen/margins" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margins">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:id="@+id/text_ingredients"
            android:textColor="@color/font"
            android:layout_marginLeft="@dimen/margins"
            android:textSize="@dimen/textSize"
            android:textStyle="bold|italic"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_ingridient"
        android:textColor="@color/text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margins">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe"
            android:id="@+id/recipe"
            android:textColor="@color/font"
            android:layout_marginLeft="@dimen/margins"
            android:textSize="@dimen/textSize"
            android:textStyle="bold|italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_recipe"
            android:textColor="@color/text" />

    </LinearLayout>

</LinearLayout>
    </ScrollView>